# Changelogs

## 1.2.9
### New Features
* Add setting model to code
* #19 grid automatisch generieren
### Bugfixes
* Add Correct Dispose Handling
### Changes
* Refactoring of all JS
* Make only one request per second instead of four per AJAX
* Refactoring adminpannel and add settings.json

## 1.2.8
### New Features
* Implement #12 Make icon transparent if there is no data update
* Implement #18 history an panikbutton pressed
### Bugfixes
* Implement #13 fixing issue with port when using proxy
* Implement #14 show description on map in tooltip on area
* Implement #25 Icons flickering when using ssl
* Add some errorhandling with locks
### Changes
* Move CoordinateSharp to own Library
* Changes to new Mqtt topic for camera density

## 1.2.7
### New Features
* Add support to display camera values that counts people. needs to be on a mqtt toipc camera/counting
* Display Crowd-Density Data on Map
### Bugfixes
* Rename Adminmodel.cs to AdminModel.cs, cause it sould be Uppercase!
* Fix a Parsing Bug in Lora-Map/Model/PositionItem.cs
### Changes
* Move the Dockerfile to the parent project Repository

## 1.2.6
### New Features
* New types of marker for a person, so you can add drawing inside

## 1.2.5
### New Features
* Implement #10 text Letzer Datenempfang is too long when scrollbar is there
### Bugfixes
* Implement #11 set textsize for every zoomlevel
### Changes
* Add an link to kml to geojson converter

## 1.2.4
### New Features
* Possible to draw textmarkers on map (eg. for static text in a polygon)
* Now using MGRS as default output

## 1.2.3
### New Features
* Implement #9 display polygons and marker on the map
### Bugfixes
* change the wort get to post
### Changes
* Default zoomlevel is now 16

## 1.2.2
### Bugfixes
* When only recieve a panic packet with gps data, update also the normal location on the map

## 1.2.1
### New Features
* Implement #6 Load the map from the Device
### Bugfixes
* Show now output 200 of images from Webserver
### Changes