@@ -4,12 +4,15 @@
 ### New Features
 * Add setting model to code
 * #19 grid automatisch generieren
+* #24 Add information about weather/warning
 ### Bugfixes
 * Add Correct Dispose Handling
+* TimeCalculation now handle negative values correct
 ### Changes
 * Refactoring of all JS
 * Make only one request per second instead of four per AJAX
 * Refactoring adminpannel and add settings.json
+* New function in TimeCalculation, so you can not have negative Timespans
 
 ## 1.2.8
 ### New Features
